convert.yaml
apiVersion: v1
kind: Service
metadata:
  name: convert
spec:
  type: ClusterIP
  selector:
    app: convert
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: convert
  name: convert
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: convert
  strategy: 
    rollingUpdate: 
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template: 
    metadata: 
      labels: 
        app: convert
    spec: 
      containers: 
        - 
          args: 
            - "--countryCodes=AU"
          image: "<docker-hub-regustry>/sony:2"
          imagePullPolicy: IfNotPresent
          name: convert
