diag.yaml
apiVersion: v1
kind: Service
metadata:
  name: diag
spec:
  type: ClusterIP
  selector:
    app: diag
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: diag
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: diag
  template: 
    metadata: 
      labels: 
        app: diag
    spec: 
      containers: 
        - 
          command: 
            - /bin/sh
            - "-c"
            - |-
                echo "CHECKING API STATUS"
                value=$(curl -I -s -L https://www.travel-advisory.info/api | grep "HTTP/2" | cut -d' ' -f2)
                if [[ "$value" == 200 ]];then
                echo "Service is up"
                else
                echo "Service is down"
                fi
          image: "odaniait/aws-kubectl:latest"
          name: diag
