health.yaml
apiVersion: v1
kind: Service
metadata:
  name: diag
spec:
  type: ClusterIP
  selector:
    app: diag
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health
  template:
    metadata:
      labels:
        app: health
    spec:
      containers:
      - name: health
